--- a/.github/workflows/check_qmd.yml
+++ b/.github/workflows/check_qmd.yml
@@ -5,6 +5,8 @@ name: Check Repo
 jobs:
   check-rmd:
     runs-on: ubuntu-latest
+    container:
+      image: rocker/tidyverse:latest
     steps:
     - name: Checkout
       uses: actions/checkout@master
@@ -12,7 +14,6 @@ jobs:
       uses: r-lib/actions/setup-r@master
     - name: Install packages
       run: |
-        R -e 'install.packages("tidyverse")'
         R -e 'install.packages("quarto")'
     - name: Check qmd Rendering
       run:  Rscript -e "quarto::quarto_render('render-this.qmd')"
