--- a/.github/workflows/check_qmd.yml
+++ b/.github/workflows/check_qmd.yml
@@ -1,6 +1,9 @@
 on: 
   push:
-    branches: main 
+    branches:
+    - master
+    paths:
+    - 'hw1.Rmd'  
 name: Check Repo
 jobs:
   check-rmd:
@@ -10,8 +13,5 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@master
-    - name: Install packages
-      run: |
-        R -e 'install.packages("quarto")'
-    - name: Check qmd Rendering
-      run:  Rscript -e "quarto::quarto_render('render-this.qmd')"
+    - name: Check Rmd Rendering
+      run:  Rscript -e "rmarkdown::render('hw1.Rmd')"
