--- a/.github/workflows/check_rmd.yml
+++ b/.github/workflows/check_rmd.yml
@@ -10,8 +10,5 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@master
-    - name: Quarto Render
-      uses: pommevilla/quarto-render@v0.3.11
-
-
-
+    - name: Check Rmd Rendering
+      run:  Rscript -e "rmarkdown::render('hw1.Rmd')"
